# dx-portfolio

./: .config.sh  .gitignore  CMakeLists.txt  LICENSE  README.md  dx-portfolio.sln
.cache/clangd/index/: WidndowsMessageMap.cpp.3A07F3F461D24F54.idx  WindowsMessageMap.cpp.3F9F4B57681ABF6C.idx  WindowsMessageMap.h.3D1EE7C826B9C115.idx  main.cc.47DB98EE7697D438.idx  main.cc.A9D1CF57713E7D25.idx  stdafx.h.CCE6A1531C032A1C.idx
Game/: Game.aps  Game.filters  Game.rc  Game.vcxproj  Game.vcxproj.filters  resource.h
Game/Source/: Application.cpp  Application.h  WinMain.cpp  pch.h
bin-int/Debug-x64/engine/: engine.dll.recipe  engine.ilk  vc143.idb
bin-int/Debug-x64/engine/engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
bin-int/Debug-x64/game/: game.exe.recipe  game.ilk  vc143.idb
bin-int/Debug-x64/game/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engine/: Engine.aps  Engine.filters  Engine.rc  engine.vcxproj  engine.vcxproj.filters  resource.h
engine/Source/: Engine.h  WinMain.cpp  pch.h
engine/Source/Common/: Logger.cpp  Logger.h  Time.cpp  Time.h
engine/Source/Core/: PerGameSetting.cpp  PerGameSetting.h
engine/Source/Platform/WIN32/: IApplication.h  WinEntry.h
engine/include/: test.h
engine/src/: engine.h  test.cpp
engine/src/core/: core.cpp  core.h  entry_point.h  header.h
game/: game.vcxproj  game.vcxproj.filters
game/src/: app.cpp  application.cpp
include/: WindowsMessageMap.h
pch/: pch.h
src/: WindowsMessageMap.cpp  main.cc
